--- a/src/style.css
+++ b/src/style.css
@@ -1,14 +1,19 @@
 body {
-    background:linear-gradient(to right,white 0%, white 25%,black 25%, black 28%, rgb(251, 59, 59) 28%, rgb(251, 59, 59) 100%) ;
+    background:linear-gradient(to right,white 0%, white 25%,black 25%, black 28%, rgb(245, 44, 44) 28%, rgb(251, 59, 59) 100%) ;
     font-family: monospace; 
 }
 
-.contenedor{
+.contenedor{ 
    display: flex;   
+}
+.navegacion{
+width: 20%;
 }
 
 .buscador {
- width: 25%;
+ width: 40%;
+ justify-content: center;
+
 }
 
 .im1{
@@ -32,9 +37,10 @@ body {
 .targets {
     width:100%;
     display: flex;
+    height: 70%;
     flex-wrap: wrap;  
     gap: 15px 15px;
-    justify-content: flex-end;
+    justify-content: flex;
     text-align: center;
 }
 
@@ -43,11 +49,47 @@ body {
     width: 200px;
     height:300px;
     background-color:rgb(11, 198, 255);
-    border: 10px solid rgb(236, 194, 8);
+    border: 10px inset rgb(236, 217, 8);
     border-radius: 45px;
     margin: block 20px;
     justify-content: center;
     padding-top: 40px;
     padding-left: 25px;
     padding-right: 25px;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size:xx-small;
 }
+
+.in1{
+border-radius: 15px;
+background:rgb(228, 232, 0);
+border: 10px groove rgb(67, 100, 221) ;
+align-content: center;
+position: relative; 
+justify-content: center;
+
+
+}
+
+
+
+ .btn{
+    background:linear-gradient(red 40%,black 40%,black 60%, white 60%);
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    border:10px solid black;
+    margin:15px;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    color:aliceblue;
+ 
+
+ }
+
+
+
+
+
+
+
+
