--- a/src/style.css
+++ b/src/style.css
@@ -1,18 +1,19 @@
 body {
     background:linear-gradient(to right,white 0%, white 25%,black 25%, black 28%, rgb(245, 44, 44) 28%, rgb(251, 59, 59) 100%) ;
     font-family: monospace; 
+
 }
 
 .contenedor{ 
-   display: flex;   
+   display: flex;
 }
 .navegacion{
-width: 20%;
+width: 10%;
 }
 
 .buscador {
- width: 40%;
- justify-content: center;
+ width: 25%;
+ justify-content:space-between;
 
 }
 
@@ -34,14 +35,46 @@ width: 20%;
   height: auto; 
 }
 
-.targets {
-    width:100%;
+.flip{
+    
     display: flex;
     height: 70%;
     flex-wrap: wrap;  
     gap: 15px 15px;
     justify-content: flex;
     text-align: center;
+ 
+    &-inner{
+     position: relative;   
+    }
+}
+
+.targets, .targetsBack {
+    position:absolute;
+    backface-visibility: hidden;
+}
+
+.targets {
+    margin: top 200px;;
+    width:auto;
+    display: flex;
+    height: 70%;
+    flex-wrap: wrap;  
+    gap: 15px 15px;
+    justify-content: flex;
+    text-align: center;  
+    }
+.targetsBack {
+    width:auto;
+    display: flex;
+    height: 70%;
+    flex-wrap: wrap;  
+    gap: 15px 15px;
+    justify-content: flex;
+    text-align: center;
+    opacity: 110;
+   
+
 }
 
 .tarjetaPokemon {
@@ -59,16 +92,34 @@ width: 20%;
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-size:xx-small;
 }
+.tarjetaPokemonBack {
 
+    width: 200px;
+    height:300px;
+    background-color:rgb(11, 198, 255);
+    border: 10px inset rgb(236, 217, 8);
+    border-radius: 45px;
+    margin: block 20px;
+    justify-content: center;
+    padding-top: 40px;
+    padding-left: 25px;
+    padding-right: 25px;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size:xx-small;
+
+}    
 .in1{
+margin: 60px;
+padding: 15px;    
 border-radius: 15px;
 background:rgb(228, 232, 0);
 border: 10px groove rgb(67, 100, 221) ;
 align-content: center;
 position: relative; 
 justify-content: center;
-
-
+font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; 
+font-size:larger;
+text-align: center;
 }
 
 
@@ -79,15 +130,14 @@ justify-content: center;
     height: 100px;
     border-radius: 50%;
     border:10px solid black;
-    margin:15px;
+    margin: 20px;
+    margin-left:150px ;
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     color:aliceblue;
+
  
 
 }
-
-
-
 
 
 
